Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Simplemente Programación</h1>
-            <h2 class="page-description"></h2>
+            <h2 class="page-description">_Estoy estudiando por mi cuenta y cuando empece vi que los libros que hay son muy extensos, muy completos sí, pero para mi gusto dan muchas vueltas. Asi que en lugar de unos apuntes a mano o en word o LaTeX los pongo en un blog conforme voy aprendiendo._
+
+_Es posible que haya errores, muchas faltas de ortografía o que no esten todo lo completo que deberían, pero conforme aprenda cosas nuevas ire actualizando._
+
+_La idea es que sea resumido, más que un libro y menos que unas diapositivas, que sea Simplemente Programación_</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
