--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">Simplemente Programación</h1>
-            <h2 class="page-description">Estoy estudiando por mi cuenta y cuando empece vi que los libros que hay son muy extensos, muy completos sí, pero para mi gusto dan muchas vueltas. Asi que en lugar de unos apuntes a mano o en word o LaTeX los pongo en un blog conforme voy aprendiendo.
+            <h2 class="page-description">Estoy estudiando por mi cuenta y cuando empece vi que los libros que hay son muy extensos, muy completos sí, pero para mi gusto dan muchas vueltas. Así que en lugar de unos apuntes a mano o en word o LaTeX los pongo en un blog conforme voy aprendiendo.
 
-Es posible que haya errores, muchas faltas de ortografía o que no esten todo lo completo que deberían, pero conforme aprenda cosas nuevas ire actualizando
+Es posible que haya errores, muchas faltas de ortografía o que no estén todo lo completo que deberían, pero conforme aprenda cosas nuevas iré actualizando
 
 La idea es que sea resumido, más que un libro y menos que unas diapositivas, que sea Simplemente Programación</h2>
         </div>
