--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title>Simplemente Programación</title>
-    <meta name="description" content="Estoy estudiando por mi cuenta y cuando empece vi que los libros que hay son muy extensos, muy completos sí, pero para mi gusto dan muchas vueltas. Así que en lugar de unos apuntes a mano o en word o LaTeX los pongo en un blog conforme voy aprendiendo. + 
-Es posible que haya errores, muchas faltas de ortografía o que no estén todo lo completo que deberían, pero conforme aprenda cosas nuevas iré actualizando + 
-La idea es que sea resumido, más que un libro y menos que unas diapositivas, que sea Simplemente Programación" />
+    <meta name="description" content="" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,9 +69,7 @@ La idea es que sea resumido, más que un libro y menos que unas diapositivas, qu
         </div>
         <div id="user_bio">
             <div class="inner">
-                Estoy estudiando por mi cuenta y cuando empece vi que los libros que hay son muy extensos, muy completos sí, pero para mi gusto dan muchas vueltas. Así que en lugar de unos apuntes a mano o en word o LaTeX los pongo en un blog conforme voy aprendiendo. + 
-Es posible que haya errores, muchas faltas de ortografía o que no estén todo lo completo que deberían, pero conforme aprenda cosas nuevas iré actualizando + 
-La idea es que sea resumido, más que un libro y menos que unas diapositivas, que sea Simplemente Programación
+                
             </div>
         </div>
     </div>
